# data_validate

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  .~lock.Tabela.csv#  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_TESTS_WORKFLOW_REVIEW.md  HOW_IT_WORKS.md  LICENSE  Makefile  README.md  RUN.sh  TESTING.md  TODO.md  Tabela.csv  coverage.json  generate_badge.sh  generate_coverage_report.py  main.py  main_parser.py  myparser.py  parser.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  settings.json  test_parser.py
.github/: copilot-instructions.md
.github/workflows/: ci-build-windows-2022.yml  ci-build.yml  ci_workflow_ubuntu_2404_python_3.yml  coverage.yml  lint.yml  linux-ci-build-ubuntu-24-04.yml  linux-lint-ubuntu-24-04.yml  linux-unit-tests-ubuntu-24-04.yml  run_test.yml  run_test_ubuntu_lasted.yml  run_test_ubuntu_latest.yml  run_test_windows_lasted.yml  run_ubuntu_2404_python_versions.yml  unit-tests.yml  windows-ci-build-windows-2022.yml  windows-unit-tests-windows-2022.yml  workflow.yml
adapta_parser/: main.py
adapta_parser/common/: __init__.py
adapta_parser/controller/: __init__.py  main.py
adapta_parser/core/: processor.py
adapta_parser/data_model/: __init__.py  sp_composition.py  sp_description.py  sp_model_abc.py  sp_proportionalities.py  sp_scenarios.py  sp_temporal_reference.py  sp_values.py
adapta_parser/middleware/: __init__.py  bootstrap.py
adapta_parser/validation/: validator_structure.py
assets/: FONTES_UTEIS.md  TOOLS.md
data_validate/: __init__.py  main.py
data_validate/config/: __init__.py  application_config.py  config.py  metadata_info.py  names_enum.py  spreadsheet_info.py
data_validate/controller/: data_context.py  main.py  processor.py  report.py
data_validate/controllers/: __init__.py  processor.py  spreadsheet_processor.py
data_validate/core/: processor.py
data_validate/data_model/: __init__.py  sp_composition.py  sp_description.py  sp_dictionary.py  sp_legend.py  sp_model_abc.py  sp_proportionality.py  sp_scenario.py  sp_temporal_reference.py  sp_value.py
data_validate/helpers/: __init__.py
data_validate/middleware/: __init__.py  bootstrap.py
data_validate/models/: __init__.py  sp_composition.py  sp_description.py  sp_dictionary.py  sp_legend.py  sp_model_abc.py  sp_proportionality.py  sp_scenario.py  sp_temporal_reference.py  sp_value.py
data_validate/tools/: __init__.py  main.py
data_validate/validation/: data_context.py  description_validator.py  scenario_validator.py  spellchecker_validator.py  temporal_reference_validator.py  validator_model_abc.py  validator_structure.py  value_validator.py
data_validate/validators/: __init__.py
dictionaries/: extra-words.dic
docs/: data_validate.html  index.html  search.js
docs/data_validate/: config.html  controllers.html  helpers.html  main.html  middleware.html  models.html  validators.html
hooks/: pre-commit
input_data/data_errors_01/: .~lock.descricao.xlsx#  descricao.xlsx  legenda.qml  proporcionalidades.xlsx  valores.xlsx
input_data/data_errors_02/: legenda.qml  proporcionalidades.xlsx  valores.xlsx
input_data/data_errors_03/: arquivo_aleatorio.xlsx  composicao.xlsx  descricao.xlsx  legenda.qml  proporcionalidades.xlsx  valores.xlsx
input_data/data_errors_04/: .~lock.valores.xlsx#  cenarios.xlsx  composicao.xlsx  descricao.xlsx  legenda.qml  proporcionalidades.xlsx  referencia_temporal.xlsx  valores.xlsx
input_data/data_errors_05/: legenda.qml  proporcionalidades.xlsx  valores.xlsx
input_data/data_errors_06/: composicao.csv  legenda.qml  proporcionalidades.csv  valores.csv
input_data/data_errors_07/: descricao.xlsx  proporcionalidades.xlsx  valores.xlsx
input_data/data_errors_08/: descricao.csv  proporcionalidades.csv  referencia_temporal.csv  valores.csv
input_data/data_errors_09/: 1.qml  descricao.xlsx  proporcionalidades.csv  valores.csv
input_data/data_errors_10/: composicao.xlsx
input_data/data_errors_11/: .~lock.descricao.xlsx#  .~lock.proporcionalidades.xlsx#  descricao.xlsx  proporcionalidades.xlsx  valores.xlsx
input_data/data_errors_12/: descricao.xlsx  proporcionalidades.xlsx  valores.xlsx
input_data/data_errors_13/: composicao.xlsx  valores.xlsx
input_data/data_errors_14/: composicao.xlsx  descricao.xlsx  proporcionalidades.xlsx
input_data/data_errors_16/: composicao.xlsx  descricao.xlsx  legenda.qml  referencia_temporal.xlsx
input_data/data_errors_17/: cenarios.csv  descricao.csv  referencia_temporal.csv
input_data/data_errors_2/: composicao.xlsx  descricao.xlsx
input_data/data_errors_3/: cenarios.xlsx  descricao.xlsx  referencia_temporal.xlsx
input_data/data_ground_truth/: composicao.xlsx  descricao.xlsx  valores.xlsx
input_data/data_ground_truth_01/: .~lock.descricao.xlsx#  composicao.xlsx  descricao.xlsx  proporcionalidades.xlsx  valores.xlsx
input_data/data_ground_truth_02/: descricao.xlsx  (+1 more)
log/: log_data_errors_00.txt  log_data_errors_01.txt  log_data_errors_02.txt  log_data_errors_03.txt  log_data_errors_04.txt  log_data_errors_05.txt  log_data_errors_06.txt  log_data_errors_07.txt  log_data_errors_08.txt  log_data_errors_09.txt  log_data_errors_10.txt  log_data_errors_11.txt  log_data_errors_12.txt  log_data_errors_13.txt  log_data_errors_14.txt  log_data_errors_15.txt  log_data_ground_truth_01.txt  log_data_ground_truth_02.txt  log_data_ground_truth_02_no_scenario.txt  log_data_ground_truth_03_csv.txt  log_data_ground_truth_04_csv_xlsx.txt  log_data_ground_truth_05.txt  log_errors.txt  log_errors_01.txt  log_errors_02.txt  log_errors_03.txt  log_errors_04.txt  log_errors_05.txt  log_errors_06.txt  log_errors_2.txt  log_errors_3.txt  log_ground_truth.txt
output_data/: data_ground_truth_01_report.html
scripts/: add_logs_coverage_badge.sh  constants.bat  constants.sh  generate_docs.sh  generate_logs_coverage_badge.sh  generate_readme.sh  local_run_main.sh  prepare_metadata.sh  prepare_pyproject.sh  run_main.sh  run_main_local.sh  run_main_pipeline.bat  run_main_pipeline.sh
src/: main.py  myparser.py  orchestrator.py  spellchecker.py
tests/: conftest.py
(+446 files in other folders)
